2020-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Chain calculation parsing mode
	* RPN syntax as parsing mode

2020-12-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix uninitialized PrintOptions::base_display and set default value to BASE_DISPLAY_NORMAL (fixes issues in floating point format output)
	* Fix output of negative numbers with floating point format

2020-11-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make all currency codes, except CUP and KGS, ecase insensitive
	* Make cup unit (avoid conflict with Cuban pesos) and gcd() function (avoid conflict with gigacandela) case sensitive

2020-11-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix precision in output of expression after RPN operation in qalc

2020-11-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not output Unicode cube root symbol (often has low legibility)
	* Show cbrt(a) instead of a^(1/3) in result (when PrintOptions::halfexp_to_sqrt is true)

2020-11-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix never ending loop with log-based unit in trigonometric function
	* Use false/true instead of 0/1 for result of equality or inequality

2020-11-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in isolate x with exponentiation factor without x in base

2020-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add automatic and dual approximation and fraction options to Calculator::calculateAndPrint()

2020-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in Calculator::convertTimeOut(), and potentially Calculator::calculateRPN() (fixes conversion in the unit manager in qalculate-gtk)

2020-11-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not ask before overwriting temporary variables in qalc
	* Add Ctrl-R shortcut for store command in qalc

2020-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>
