@@ -1,3 +1,7 @@
+2020-12-12 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix saving to an existing variable (using save() or ":=") of a value containing the very same variable
+
 2020-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Chain calculation parsing mode
